--- a/Grid Project PortFolio Site/index.html
+++ b/Grid Project PortFolio Site/index.html
@@ -25,7 +25,13 @@
                 <div class="bar3"></div>
             </div>
         </header>
-
+        <nav class="mobileNav">
+            <a href="#work">Work</a>
+            <a href="#contact">Contact</a>
+            <a href="#"><img src="dribble_icon.png" alt=""></a>
+            <a href="#"><img src="insta_icon.png" alt=""></a>
+            <a href="#"><img src="v_icon.png" alt=""></a>
+        </nav>
         <div class="project-grid">
             <div class="project" id="eth">
                 <img src="eth.avif" alt="">
@@ -41,7 +47,7 @@
             </div>
             <div class="project" id="astro">
                 <img src="astro.avif" alt="">
-                <p class="overlay">VIEW PROJECT</p>
+                <p class="overlay white">VIEW PROJECT</p>
             </div>
             <div class="project" id="cube">
                 <img src="cube.avif" alt="">
@@ -53,7 +59,7 @@
             </div>
             <div class="project" id="insta">
                 <img src="insta.avif" alt="">
-                <p class="overlay">VIEW PROJECT</p>
+                <p class="overlay white">VIEW PROJECT</p>
             </div>
             <div class="project" id="foam">
                 <img src="foam.avif" alt="">
@@ -61,10 +67,12 @@
             </div>
             <div class="project" id="dimensional">
                 <img src="dimensional.avif" alt="">
-                <p class="overlay">VIEW PROJECT</p>
+                <p class="overlay white">VIEW PROJECT</p>
             </div>
         </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
